# fastapi-docker-CI

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
app/: main.py  test_main.py
