[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gabriel Capizani dos Santos <gabriel.santos@ringa.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.7.3"
typing = "^3.7.4"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
pytest = "^7.1.2"
coverage = "^6.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
